<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/custom_dialogue_bg"
    android:orientation="vertical"
    android:padding="@dimen/_10sdp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/share_balance"
            android:textColor="@color/black"
            android:textSize="@dimen/_12sdp" />

        <ImageView
            android:id="@+id/clear"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="@dimen/_10sdp"
            android:padding="@dimen/_3sdp"
            android:src="@drawable/baseline_clear_24"
            app:tint="@color/purple_700"
            tools:ignore="ContentDescription" />
    </RelativeLayout>


    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:hint="@string/referral"
        app:expandedHintEnabled="false"
        app:helperText="Go to More -> Invite a friend and copy referral id"
        app:hintEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ref_et"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/quick_medium"
            android:hint="@string/enter_key"
            android:inputType="text"
            android:textSize="@dimen/_10sdp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:hint="@string/balance"
        app:expandedHintEnabled="false"
        app:helperText="How many coins you want to send?"
        app:hintEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/balance_et"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/quick_medium"
            android:hint="@string/enter_balance"
            android:inputType="numberSigned"
            android:textSize="@dimen/_10sdp" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="10 % balance will be deduct on every transaction"
        android:textSize="@dimen/_10sdp"
        android:textColor="@color/l_black"
        android:layout_margin="@dimen/_9sdp"
        android:fontFamily="@font/quick_regular"
        />


    <Button
        android:id="@+id/addBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginBottom="@dimen/_25sdp"
        android:background="@drawable/btn_bg"
        android:backgroundTint="@color/purple_500"
        android:text="@string/send_balance"
        android:textColor="@color/white" />
</LinearLayout>