<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.StartupScreen">
    <View
        android:id="@+id/v1"
        android:layout_width="@dimen/_1sdp"
        android:layout_height="@dimen/_1sdp"
        android:layout_centerInParent="true"
        />
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/v1"
        android:src="@drawable/startscreen"
        android:scaleType="fitCenter"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/v1"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="@dimen/_20sdp"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/make_strong_relationship_with_your_team"
            android:textSize="@dimen/_20sdp"
            android:textColor="@color/black"
            android:fontFamily="@font/hv_bold"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/we_help_you_to_connect_with_with_your_team_and_make_a_strong_bonding_with_your_teamate"
            android:layout_marginTop="@dimen/_10sdp"
            android:fontFamily="@font/quick_regular"
            android:textSize="@dimen/_11sdp"
            android:textColor="@color/l_black"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:layout_marginTop="@dimen/_20sdp"
            >
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/signin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/btn_bg_green"
                android:layout_gravity="center"
                android:text="@string/sign_in"
                android:textColor="@color/white"
                android:layout_margin="@dimen/_5sdp"
                android:padding="@dimen/_10sdp"
                android:fontFamily="@font/quick_bold"
                />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/signup"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/btn_bg"
                android:layout_gravity="center"
                android:text="@string/signup"
                android:textColor="@color/white"
                android:layout_margin="@dimen/_5sdp"
                android:padding="@dimen/_10sdp"
                android:fontFamily="@font/quick_bold"
                />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>