<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.InviteScreen">


    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/back"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_centerVertical="true"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:padding="@dimen/_3sdp"
            android:src="@drawable/back"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/quick_regular"
            android:text="@string/invite_friend"
            android:textColor="@color/black"
            android:textSize="@dimen/_12sdp" />
    </RelativeLayout>

    <TextView
        android:id="@+id/tvsuggest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:fontFamily="@font/quick_bold"
        android:text="@string/invite_friends_and_get_benefits"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="@dimen/_14sdp"
        android:layout_below="@id/header"
        android:layout_centerHorizontal="true"/>

    <ImageView
        android:id="@+id/linkEt"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_200sdp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_100sdp"
        android:src="@drawable/invite_friend"
        tools:ignore="ContentDescription" />

    <LinearLayout
        android:id="@+id/textLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linkEt"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:gravity="center"
        android:orientation="vertical">

<!--        <TextView-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginTop="@dimen/_10sdp"-->
<!--            android:fontFamily="@font/quick_bold"-->
<!--            android:text="@string/invite_friends_and_get_benefits"-->
<!--            android:textAlignment="center"-->
<!--            android:textColor="@color/black"-->
<!--            android:textSize="@dimen/_14sdp" />-->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:fontFamily="@font/quick_regular"
            android:text="@string/add_a_friend_in_shakehand_and_earn_points"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/_12sdp" />


    </LinearLayout>

    <Button
        android:id="@+id/copy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/share"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        android:background="@drawable/btn_round"
        android:drawableEnd="@drawable/ic_document"
        android:drawableTint="@color/white"
        android:text="@string/copy_referral_id"
        tools:targetApi="m" />

    <Button
        android:id="@+id/share"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        android:layout_marginBottom="@dimen/_15sdp"
        android:background="@drawable/btn_round"
        android:text="@string/invite_now"

        />


</RelativeLayout>

